button color change

--- a/css/styles.css
+++ b/css/styles.css
@@ -2481,7 +2481,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #64a19d;
+  background-color:#000000;
   border-color: #64a19d;
 }
 .btn-primary:hover {
