Final Edits before starting new portfolio in react

--- a/css/styles.css
+++ b/css/styles.css
@@ -2437,7 +2437,7 @@ textarea.form-control {
   }
 }
 
-.btn {
+.btn-sm {
   display: inline-block;
   font-weight: 400;
   color: #212529;
@@ -2448,7 +2448,7 @@ textarea.form-control {
       -ms-user-select: none;
           user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 1px solid;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
